Add experimental to visibility of deepsmith.

--- a/deeplearning/deepsmith/proto/BUILD
+++ b/deeplearning/deepsmith/proto/BUILD
@@ -10,7 +10,10 @@ py_proto_library(
         ":service_py_pb2",
     ],
     protos = ["datastore.proto"],
-    visibility = ["//deeplearning/deepsmith:__subpackages__"],
+    visibility = [
+        "//deeplearning/deepsmith:__subpackages__",
+        "//experimental:__subpackages__",
+    ],
     with_grpc = True,
     deps = [requirement("protobuf")],
 )
@@ -18,7 +21,10 @@ py_proto_library(
 py_proto_library(
     name = "deepsmith_py_pb2",
     protos = ["deepsmith.proto"],
-    visibility = ["//deeplearning/deepsmith:__subpackages__"],
+    visibility = [
+        "//deeplearning/deepsmith:__subpackages__",
+        "//experimental:__subpackages__",
+    ],
     deps = [requirement("protobuf")],
 )
 
@@ -31,7 +37,10 @@ py_proto_library(
         "//deeplearning/clgen/proto:sampler_py_pb2",
     ],
     protos = ["generator.proto"],
-    visibility = ["//deeplearning/deepsmith:__subpackages__"],
+    visibility = [
+        "//deeplearning/deepsmith:__subpackages__",
+        "//experimental:__subpackages__",
+    ],
     with_grpc = True,
     deps = [requirement("protobuf")],
 )
@@ -43,7 +52,10 @@ py_proto_library(
         ":service_py_pb2",
     ],
     protos = ["harness.proto"],
-    visibility = ["//deeplearning/deepsmith:__subpackages__"],
+    visibility = [
+        "//deeplearning/deepsmith:__subpackages__",
+        "//experimental:__subpackages__",
+    ],
     with_grpc = True,
     deps = [requirement("protobuf")],
 )
@@ -51,6 +63,9 @@ py_proto_library(
 py_proto_library(
     name = "service_py_pb2",
     protos = ["service.proto"],
-    visibility = ["//deeplearning/deepsmith:__subpackages__"],
+    visibility = [
+        "//deeplearning/deepsmith:__subpackages__",
+        "//experimental:__subpackages__",
+    ],
     deps = [requirement("protobuf")],
 )
