Work in progress on cldrive service.

--- a/deeplearning/deepsmith/services/BUILD
+++ b/deeplearning/deepsmith/services/BUILD
@@ -19,8 +19,8 @@ py_binary(
         ":services",
         "//deeplearning/deepsmith/proto:deepsmith_py_pb2",
         "//deeplearning/deepsmith/proto:generator_py_pb2",
-        "//lib/labm8:pbutil",
         "//lib/labm8:labdate",
+        "//lib/labm8:pbutil",
         requirement("grpcio"),
         requirement("absl-py"),
     ],
@@ -131,6 +131,7 @@ py_binary(
         ":harness",
         ":services",
         "//deeplearning/deepsmith/proto:harness_py_pb2",
+        "//gpu/cldrive",
         "//lib/labm8:pbutil",
         requirement("absl-py"),
         requirement("grpcio"),
