Add cldrive harness deps.

--- a/deeplearning/deepsmith/services/BUILD
+++ b/deeplearning/deepsmith/services/BUILD
@@ -132,7 +132,10 @@ py_binary(
         ":services",
         "//deeplearning/deepsmith/proto:harness_py_pb2",
         "//gpu/cldrive",
+        "//lib/labm8:fs",
+        "//lib/labm8:labdate",
         "//lib/labm8:pbutil",
+        "//lib/labm8:system",
         requirement("absl-py"),
         requirement("grpcio"),
     ],
