Use a dummy generator for testing opencl_fuzz.

--- a/experimental/deeplearning/deepsmith/opencl_fuzz/BUILD
+++ b/experimental/deeplearning/deepsmith/opencl_fuzz/BUILD
@@ -10,5 +10,6 @@ py_binary(
         # "//deeplearning/deepsmith/services:clgen",
         "//deeplearning/deepsmith/services:cldrive",
         "//deeplearning/deepsmith/services:randchar",
+        "//deeplearning/deepsmith/services:dummy_generator",
     ],
 )
