Switch to CLgen generator.

--- a/deeplearning/deepsmith/proto/BUILD
+++ b/deeplearning/deepsmith/proto/BUILD
@@ -33,8 +33,7 @@ py_proto_library(
     proto_deps = [
         ":deepsmith_py_pb2",
         ":service_py_pb2",
-        "//deeplearning/clgen/proto:model_py_pb2",
-        "//deeplearning/clgen/proto:sampler_py_pb2",
+        "//deeplearning/clgen/proto:clgen_py_pb2",
     ],
     protos = ["generator.proto"],
     visibility = [
