Update dsmith generator to new CLgen API.

--- a/deeplearning/deepsmith/services/BUILD
+++ b/deeplearning/deepsmith/services/BUILD
@@ -110,9 +110,7 @@ py_binary(
     deps = [
         ":generator",
         ":services",
-        "//deeplearning/clgen:samplers",
-        "//deeplearning/clgen/models",
-        "//deeplearning/clgen/proto:model_py_pb2",
+        "//deeplearning/clgen",
         "//deeplearning/deepsmith/proto:deepsmith_py_pb2",
         "//deeplearning/deepsmith/proto:generator_py_pb2",
         requirement("grpcio"),
