Add a docker image.

--- a/experimental/deeplearning/deepsmith/opencl_fuzz/BUILD
+++ b/experimental/deeplearning/deepsmith/opencl_fuzz/BUILD
@@ -1,6 +1,7 @@
 # Fuzz testing OpenCL devices using CLgen.
 
 load("@requirements//:requirements.bzl", "requirement")
+load("@io_bazel_rules_docker//python3:image.bzl", "py3_image")
 
 py_binary(
     name = "opencl_fuzz",
@@ -13,4 +14,12 @@ py_binary(
         requirement("absl-py"),
         requirement("humanize"),
     ],
+)
+
+py3_image(
+    name = "opencl_fuzz_image",
+    srcs = ["opencl_fuzz.py"],
+    base = "@python3.6//image",
+    main = "opencl_fuzz.py",
+    deps = [":opencl_fuzz"],
 )
