--- a/deeplearning/deepsmith/services/BUILD
+++ b/deeplearning/deepsmith/services/BUILD
@@ -140,22 +140,22 @@ py_library(
 py_binary(
     name = "cldrive",
     srcs = ["cldrive.py"],
+    data = ["@opencl_headers"],
     default_python_version = "PY3",
     srcs_version = "PY3",
     visibility = [
         "//deeplearning/deepsmith/cli:__subpackages__",
         "//experimental:__subpackages__",
     ],
-    data = ["@opencl_headers//:opencl_headers",],
     deps = [
         ":harness",
         ":services",
         "//deeplearning/deepsmith/proto:harness_py_pb2",
         "//gpu/cldrive",
         "//gpu/oclgrind",
+        "//lib/labm8:bazelutil",
         "//lib/labm8:fs",
         "//lib/labm8:labdate",
-        "//lib/labm8:bazelutil",
         "//lib/labm8:pbutil",
         "//lib/labm8:system",
         requirement("absl-py"),
