--- a/experimental/deeplearning/deepsmith/opencl_fuzz/BUILD
+++ b/experimental/deeplearning/deepsmith/opencl_fuzz/BUILD
@@ -11,6 +11,9 @@ py_binary(
         "//deeplearning/deepsmith/proto:harness_py_pb2",
         "//deeplearning/deepsmith/services:cldrive",
         "//deeplearning/deepsmith/services:clgen",
+        "//gpu/oclgrind",
+        "//lib/labm8:labdate",
+        "//lib/labm8:pbutil",
         requirement("absl-py"),
         requirement("humanize"),
     ],
