Add a script to print interesting protos.

--- a/experimental/deeplearning/deepsmith/opencl_fuzz/BUILD
+++ b/experimental/deeplearning/deepsmith/opencl_fuzz/BUILD
@@ -26,3 +26,15 @@ py3_image(
     main = "opencl_fuzz.py",
     deps = [":opencl_fuzz"],
 )
+
+py_binary(
+    name = "print",
+    srcs = ["print.py"],
+    deps = [
+        "//deeplearning/deepsmith/proto:deepsmith_py_pb2",
+        "//lib/labm8:fmt",
+        "//lib/labm8:pbutil",
+        requirement("absl-py"),
+        requirement("humanize"),
+    ],
+)
