Add a default entry point.

--- a/experimental/deeplearning/deepsmith/opencl_fuzz/Dockerfile
+++ b/experimental/deeplearning/deepsmith/opencl_fuzz/Dockerfile
@@ -26,3 +26,5 @@ ADD model /data/model
 
 # Add and unpack the CLgen build archive.
 ADD opencl_fuzz_image-layer.tar /
+
+ENTRYPOINT ["python3.6", "/app/experimental/deeplearning/deepsmith/opencl_fuzz/opencl_fuzz_image.binary", "--generator=/data/generator.pbtxt"]
