Add generic difftest implementation.

--- a/experimental/deeplearning/deepsmith/opencl_fuzz/BUILD
+++ b/experimental/deeplearning/deepsmith/opencl_fuzz/BUILD
@@ -7,6 +7,7 @@ py_binary(
     name = "opencl_fuzz",
     srcs = ["opencl_fuzz.py"],
     deps = [
+        "//deeplearning/deepsmith/proto:deepsmith_py_pb2",
         "//deeplearning/deepsmith/proto:generator_py_pb2",
         "//deeplearning/deepsmith/proto:harness_py_pb2",
         "//deeplearning/deepsmith/services:cldrive",
@@ -16,6 +17,17 @@ py_binary(
         "//lib/labm8:pbutil",
         requirement("absl-py"),
         requirement("humanize"),
+    ],
+)
+
+py_test(
+    name = "opencl_fuzz_test",
+    srcs = ["opencl_fuzz_test.py"],
+    deps = [
+        ":opencl_fuzz",
+        "//deeplearning/deepsmith/proto:deepsmith_py_pb2",
+        requirement("absl-py"),
+        requirement("pytest"),
     ],
 )
 
