Use local clang to compile OpenCL testcases.

--- a/experimental/deeplearning/deepsmith/opencl_fuzz/Dockerfile
+++ b/experimental/deeplearning/deepsmith/opencl_fuzz/Dockerfile
@@ -8,7 +8,7 @@ MAINTAINER Chris Cummins <chrisc.101@gmail.com>
 # on system linker and C headers), and libreadline6-dev to provide
 # libreadline.so which is needed by oclgrind.
 RUN apt-get update && \
-    apt-get install -y --no-install-recommends build-essential gcc libc6-dev libreadline6-dev
+    apt-get install -y --no-install-recommends binutils libgcc-6-dev libc6-dev libreadline6-dev
 
 # Dirty hack to workaround the fact that oclgrind demands libreadline.so.6, but
 # the current Ubuntu package provides libreadline.so.7.
