Split services into separate directories.

--- a/deeplearning/deepsmith/cli/BUILD
+++ b/deeplearning/deepsmith/cli/BUILD
@@ -16,10 +16,10 @@ py_binary(
     name = "generate_testcases",
     srcs = ["generate_testcases.py"],
     deps = [
+        "//deeplearning/deepsmith:services",
         "//deeplearning/deepsmith/proto:datastore_py_pb2",
         "//deeplearning/deepsmith/proto:deepsmith_py_pb2",
         "//deeplearning/deepsmith/proto:generator_py_pb2",
-        "//deeplearning/deepsmith/services",
         requirement("absl-py"),
     ],
 )
@@ -43,10 +43,10 @@ py_binary(
     name = "run_testcases",
     srcs = ["run_testcases.py"],
     deps = [
+        "//deeplearning/deepsmith:services",
         "//deeplearning/deepsmith/proto:datastore_py_pb2",
         "//deeplearning/deepsmith/proto:deepsmith_py_pb2",
         "//deeplearning/deepsmith/proto:harness_py_pb2",
-        "//deeplearning/deepsmith/services",
         requirement("absl-py"),
     ],
 )
