Fix dependency target name.

--- a/experimental/deeplearning/deepsmith/opencl_fuzz/BUILD
+++ b/experimental/deeplearning/deepsmith/opencl_fuzz/BUILD
@@ -7,7 +7,7 @@ py_binary(
     name = "opencl_fuzz",
     srcs = ["opencl_fuzz.py"],
     deps = [
-        "//deeplearning/deepsmith/generators:clgen",
+        "//deeplearning/deepsmith/generators:clgen_pretrained",
         "//deeplearning/deepsmith/harnesses:cldrive",
         "//deeplearning/deepsmith/proto:deepsmith_py_pb2",
         "//deeplearning/deepsmith/proto:generator_py_pb2",
