Use phd_base image for opencl_fuzz image.

--- a/experimental/deeplearning/deepsmith/opencl_fuzz/BUILD
+++ b/experimental/deeplearning/deepsmith/opencl_fuzz/BUILD
@@ -26,7 +26,7 @@ py_binary(
 py3_image(
     name = "opencl_fuzz_image",
     srcs = ["opencl_fuzz.py"],
-    base = "@python3.6//image",
+    base = "@base//image",
     main = "opencl_fuzz.py",
     deps = [":opencl_fuzz"],
 )
