Add a pandas wrapper to bring in missing deps.

--- a/docs/2018_07_issta/artifact_evaluation/BUILD
+++ b/docs/2018_07_issta/artifact_evaluation/BUILD
@@ -82,8 +82,8 @@ py_binary(
         "//lib/labm8:fs",
         "//lib/labm8:labtypes",
         "//lib/labm8:pbutil",
+        "//third_party/py/pandas",
         requirement("absl-py"),
-        requirement("pandas"),
         requirement("progressbar2"),
     ],
 )
