--- a/tools/docker/phd_base/Dockerfile
+++ b/tools/docker/phd_base/Dockerfile
@@ -5,12 +5,16 @@ MAINTAINER Chris Cummins <chrisc.101@gmail.com>
 # Put Python into /bin, needed by bazel py_binary script entrypoints.
 RUN ln -s /usr/local/bin/python3.6 /usr/bin/python
 
-# Install a standard compiler toolchain which is needed for cldrive harnesses
-# (because the current clang compilation is not yet entirely hemetic and relies
-# on system linker and C headers), and libreadline6-dev to provide
-# libreadline.so which is needed by oclgrind.
+# Install a few necessary bits and pieces:
+#   * a standard compiler toolchain which is needed for cldrive harnesses
+#    (because the current clang compilation is not yet entirely hemetic and
+#     relies on system linker and C headers)
+#   * libreadline6-dev to provide libreadline.so which is needed by oclgrind.
+#   * lbzip2 which is needed by tar to unpack .tar.bz2 files, which clgen
+#     uses to encode corpus archives.
 RUN apt-get update && \
-    apt-get install -y --no-install-recommends binutils libgcc-6-dev libc6-dev libreadline6-dev
+    apt-get install -y --no-install-recommends \
+    binutils libgcc-6-dev libc6-dev libreadline6-dev lbzip2
 
 # Dirty hack to workaround the fact that oclgrind demands libreadline.so.6, but
 # the current Ubuntu package provides libreadline.so.7.
