Update ISSTA’18 artifact deps.

--- a/docs/2018_07_issta/artifact_evaluation/BUILD
+++ b/docs/2018_07_issta/artifact_evaluation/BUILD
@@ -18,9 +18,9 @@ py_binary(
     srcs_version = "PY3",
     deps = [
         "//deeplearning/deepsmith/generators:clgen",
-        "//deeplearning/deepsmith/generators:generator",
         "//deeplearning/deepsmith/proto:generator_py_pb2",
         "//lib/labm8:bazelutil",
+        "//lib/labm8:crypto",
         "//lib/labm8:pbutil",
         requirement("absl-py"),
     ],
@@ -49,13 +49,12 @@ py_binary(
     default_python_version = "PY3",
     srcs_version = "PY3",
     deps = [
-        "//deeplearning/deepsmith/generators:clgen",
-        "//deeplearning/deepsmith/generators:generator",
         "//deeplearning/deepsmith/harnesses:cldrive",
         "//deeplearning/deepsmith/proto:deepsmith_py_pb2",
         "//deeplearning/deepsmith/proto:harness_py_pb2",
         "//gpu/oclgrind",
         "//lib/labm8:bazelutil",
+        "//lib/labm8:crypto",
         "//lib/labm8:fs",
         "//lib/labm8:labtypes",
         "//lib/labm8:pbutil",
