--- a/learn/challenges/BUILD
+++ b/learn/challenges/BUILD
@@ -7,7 +7,7 @@ cc_test(
         "-Iexternal/benchmark/include",
     ],
     deps = [
-        "@benchmark//:main",
+        "@com_github_google_benchmark//:benchmark",
         "@gtest//:main",
     ],
 )
@@ -38,7 +38,7 @@ cc_test(
         "-Iexternal/benchmark/include",
     ],
     deps = [
-        "@benchmark//:main",
+        "@com_github_google_benchmark//:benchmark",
         "@gtest//:main",
     ],
 )
