Add per-document packages for docs.

--- a/docs/2018_07_acaces/BUILD
+++ b/docs/2018_07_acaces/BUILD
@@ -1,9 +1,9 @@
-# DeepSmith: Compiler Fuzzing through Deep Learning, ACACES'18.
+# DeepSmith: Compiler Fuzzing through Deep Learning (ACACES'18).
 
 exports_files(["README.md"])
 
 genrule(
-    name = "paper",
+    name = "2018_07_acaces",
     srcs = glob([
         "**/*.tex",
         "acaces.bst",
