--- a/docs/2018_07_isagt/BUILD
+++ b/docs/2018_07_isagt/BUILD
@@ -1,11 +1,16 @@
-# Position Paper, ISAGT'18.
+# Towards Collaborative Performance Tuning of Algorithmic Skeletons (HLPGPU'16).
 
 exports_files(["README.md"])
 
 genrule(
-    name = "paper",
-    srcs = ["paper.tex"],
-    outs = ["paper.pdf"],
-    cmd = "$(location //tools:autotex) docs/2018_07_isagt/paper.tex $@",
+    name = "2016_01_hlpgpu",
+    srcs = glob([
+        "tex/**/*.bib",
+        "tex/**/*.cls",
+        "tex/**/*.tex",
+        "tex/img/*",
+    ]),
+    outs = ["2016_01_hlpgpu.pdf"],
+    cmd = "$(location //tools:autotex) docs/2016_01_hlpgpu/tex/paper.tex $@",
     tools = ["//tools:autotex"],
 )
