A training telemetry to pre-trained models.

--- a/deeplearning/clgen/models/BUILD
+++ b/deeplearning/clgen/models/BUILD
@@ -147,9 +147,11 @@ py_library(
         ":tensorflow_backend",
         "//deeplearning/clgen:cache",
         "//deeplearning/clgen:samplers",
+        "//deeplearning/clgen:telemetry",
         "//deeplearning/clgen/corpuses:atomizers",
         "//deeplearning/clgen/proto:internal_py_pb2",
         "//deeplearning/clgen/proto:model_py_pb2",
+        "//deeplearning/clgen/proto:telemetry_py_pb2",
         "//lib/labm8:cache",
         "//lib/labm8:labdate",
         "//lib/labm8:pbutil",
