Update lmk for monorepo.

--- a/util/lmk/BUILD
+++ b/util/lmk/BUILD
@@ -1,10 +1,21 @@
+# lmk - An alarm clock for the command line.
+
+load("@requirements//:requirements.bzl", "requirement")
+
 licenses(["notice"])  # MIT
 
-exports_files(["LICENSE"])
+exports_files([
+    "demo.png",
+    "LICENSE",
+    "README.md",
+])
 
 py_binary(
     name = "lmk",
     srcs = ["lmk.py"],
     default_python_version = "PY3",
     srcs_version = "PY3",
+    deps = [
+        requirement("humanize"),
+    ]
 )
