--- a/deeplearning/deepsmith/harnesses/BUILD
+++ b/deeplearning/deepsmith/harnesses/BUILD
@@ -26,7 +26,10 @@ py_binary(
         ":harness",
         "//deeplearning/deepsmith:services",
         "//deeplearning/deepsmith/proto:harness_py_pb2",
-        "//gpu/cldrive",
+        "//gpu/cldrive:cgen",
+        "//gpu/cldrive:data",
+        "//gpu/cldrive:driver",
+        "//gpu/cldrive:env",
         "//gpu/oclgrind",
         "//lib/labm8:bazelutil",
         "//lib/labm8:fs",
