Move oclgrind env into cldrive module.

--- a/docs/2018_07_issta/artifact_evaluation/BUILD
+++ b/docs/2018_07_issta/artifact_evaluation/BUILD
@@ -53,7 +53,7 @@ py_binary(
         "//deeplearning/deepsmith/harnesses:cldrive",
         "//deeplearning/deepsmith/proto:deepsmith_py_pb2",
         "//deeplearning/deepsmith/proto:harness_py_pb2",
-        "//gpu/oclgrind",
+        "//gpu/cldrive:env",
         "//lib/labm8:bazelutil",
         "//lib/labm8:crypto",
         "//lib/labm8:fs",
